<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">IHWC</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_team_info">TeamInfoActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="MemberOfIIHF">Member of IIHF since</string>
    <string name="MenRanking">Men\'s World Ranking</string>
    <string name="WomenRanking">Women\'s World Ranking</string>
    <string name="MalePlayers">Male Players</string>
    <string name="FemalePlayers">Female Players</string>
    <string name="JuniorPlayers">Junior Players</string>
    <string name="Referee">Total Referee</string>
    <string name="IndoorRinks">Indoor Rinks</string>
    <string name="OutdoorRinks">Outdoor Rinks</string>
    <string name="Info">Info</string>
    <string name="Roster">Roster</string>
    <string name="Games">Games</string>
    <string name="Schedule">Schedule</string>
    <string name="Statistics">Statistics</string>
    <string name="title_activity_fullscreen_game">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="facebook_application_id" translatable="false">306328297720681</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb306328297720681</string>
    <string name="title_activity_game">GameActivity</string>
</resources>